--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,427 +1,29 @@
 % !TeX root = ../main.tex
 % -*- coding: utf-8 -*-
+% !TeX root = ../main.tex
+% -*- coding: utf-8 -*-
 
-\chapter{南开大学学位论文格式宏包 NKThesis 使用说明} \label{chpt:A}
+\chapter{绪论}
+\label{chpt:introduction}
 
-\section{系统要求}
 
-模板仅在 TeXLive 2016 下测试通过。对于其它 TeX 发行版可能需要做个别修改。
+本模板参照南开大学学位论文写作规范编写，
+仅仅提供了论文的基本格式，包括章节标题和正文字体、字号等等的设置。
 
-\section{NKThesis 使用说明}
 
-本模板可以使用以下两种方式编译:
-\begin{enumerate}
- \item \XeLaTeX [推荐]
-\end{enumerate}
 
-例如，
-\begin{verbatim}
-         xelatex main
-         biber main      % 处理参考文献
-         xelatex main   % 连续编译两遍以生成正确的文献引用。
-\end{verbatim}
+您自愿使用这个模板。
+提供本模板的目的是为了给您的论文写作带来方便，然而，
+作者不保证这个模板完全符合学校的要求，也不对由此产生的任何后果负责。
+如果您不同意这些条款，请不要使用这个模板。
 
 
+\section{常用内容}
 
-
-
-本模板用到 宋体、楷体、仿宋、黑体四种字体. 若需重新配置字体, 请修改 NKTfonts.cfg.
-对于 Linux/Mac 下的 TeX Live 2009, 可能需要设置环境变量 OSFONTDIR, 具体内容请参考 texmf.cnf.
-
-
-我们建议您使用\XeLaTeX\ 编译。与前两种方法相比，\XeLaTeX\  编译长文档的速度更快，
-编译一篇一百多页的论文只需几秒的时间(SL9400 @ 1.86GHz)。
-
-在改变编译方式前应先删除 *.toc 和 *.aux 文件，
-因为不同编译方式产生的辅助文件格式可能并不相同。
-
-
-
-注意：使用 \XeLaTeX\ 编译时，\XeTeX\ 的版本应不低于 0.9995.0(MiKTeX 2.8 或者 TeXLive 2009)。
-
-
-\section{引用章节号}
-\label{sec:ex:A}
-
-引用章节号请参考如下格式: \ref{chpt:A}\ref{sec:ex:A}.
-
-
-\section{中英文间隔}
-
-使用 \XeLaTeX\ 编译时，会自动在中英文转换时添加必要的空格。 使用 [PDF]\LaTeX\
-编译时仅忽略中文之间的空格，而中英文之间的空格予以保留。
-因此，不管何种编译方式，您都不需要在中英文间添加 $\tilde{}$ 以获得额外的空格。例如，
-
-这是 English 中文 $x=y$ 测试
-
-这是English中文$x=y$测试
-
-可以看出，以上两行用 \XeLaTeX\ 编译的结果是相同的。
-
-
-\section{NKThesis 预调用的宏包}
-
-NKThesis 已经调用以下宏包，您无须重新调用。
-
-\begin{center}
-\tablecaption{NKThesis 预调用的宏包}
-\begin{tabular}{l|l}
-\hline
-编译方式 & 调用的宏包\\ \hline
-\XeLaTeX & xeCJK, CJKnumb, graphicx, mathptmx \\ \hline
-[PDF]\LaTeX & CJK, CJKnumb, uniGBK, graphicx, mathptmx \\
-\hline
-\end{tabular}
-\end{center}
-
-
-\section{图表}
-
-插图的例子：
-
-\begin{center}
-\includegraphics[viewport=0 0 2984 969,width=40mm]{nankaidaxue.pdf}
-\figurecaption{南开大学}
-\end{center}
-
-\section{字体}
-
-一般情况下, 您不需要显式地设置字体. 如果确实需要, 请使用以下命令
-
-\begin{verbatim}
-宋体:  \rmfamily\upshape 或 \songti
-黑体:  \bfseries 或 \heiti
-楷体:  \itshape  或 \kaiti
-仿宋:  \ttfamily 或 \fangsong
-加粗:  \jiacu
-\end{verbatim}
-
-
-\section{参考文献} \label{manual:ref}
-参考文献引用:
-\cite{ChenCheChen2001,Nadkarni-1992,Hua-Wang-1973}
-\cite{ZhuKeZhen,Huo,Example}\cite{JiangXiZhou,Timoshenko,Zhang-Wang,Ding,GB6447-86}
-\cite[Theorem 2.1]{ZhuKeZhen}
-
-\subsection{录入参考文献}
-
-本模板采用 biblatex 宏包管理参考文献。如果你对此不熟悉，可以
-\begin{enumerate}
-\item 参考宏包使用说明，或者
-\item 手工排版参考文献，然后参考 nkthesis.bib 最后 3 条的格式录入。
-\end{enumerate}
-
-
-
-\section{一些建议}
-\subsection{关于分数的写法}
-
-
-\LaTeX 提供宏命令\verb+\frac+, 用以打印分数. 为使得版面整齐, 该命令的使用应遵循以下原则:
-
-\begin{enumerate}
-\item 仅在分行表达式中使用,
-\item 不嵌套使用,
-\item 不在上下标中使用.
-\end{enumerate}
-
-也就是说, 行内表达式和上下标中出现分数时一律用 $a/b$表示, 如
-$(x+2)/((3x^2+4)(7+y))$. 下面是居中表达式:
-
-\[
- x^2 = y^{1/2} +3.
-\]
-
-多行表达式: 尽量在加、减、乘、等号前换行. 在乘号前换行时,
-下一行首用 \string\times:
-\def\iint{\mathop{\int\!\!\!\int}}\def\calG{\mathcal G}
-\begin{eqnarray}
-&&\left|(W_{\psi_1}f)(a,b)-(W_{\psi_1}f)(a_j,b_{j,k})\right|^{2}\nonumber\\
-&=&\frac{1}{C^{2}_{\varphi}}\Bigg|\iint_{\calG} (W_{\varphi}f)(s,t) \nonumber\\
-&&\qquad\times \Bigg( (W_{\psi_1}\varphi)\left(\frac{a}{s},
-\frac{b-t}{s}\right)
-     -(W_{\psi_1}\varphi)\left(\frac{a_{j}}{s}, \frac{b_{j,k}-t}{s}\right)\Bigg)
-  \frac{dsdt}{s^{d+1}}\Bigg|^2 \nonumber\\
-&\le& \frac{1}{C^2_{\varphi}} \iint_{\calG} |(W_{\varphi}f)(s,t)|^2 \nonumber\\
-&&\qquad \times\left| (W_{\psi_1}\varphi)\left(\frac{a}{s},
-\frac{b-t}{s}\right)
-    -(W_{\psi_1}\varphi)\left(\frac{a_{j}}{s}, \frac{b_{j,k}-t}{s}\right)\right|
-   \frac{dsdt}{s^{d+1}}  \nonumber\\
-&&\qquad \times   \iint_{\calG}\!
- \left|(W_{\psi_1}\varphi)\left(\frac{a}{s}, \frac{b-t}{s}\right)
-    -(W_{\psi_1}\varphi)\left(\frac{a_{j}}{s}, \frac{b_{j,k}-t}{s}\right)\right|
- \frac{ ds dt}{s^{d+1}} \nonumber\\
-&=& \frac{1}{C^2_{\varphi}} ....  \label{eq:a0}
-\end{eqnarray}
-
-
-\subsection{标点}
-科技文献中一般用半角标点, 请参考《中国科学》发表的论文.
-
-如果使用全角标点, 可以使用
-\begin{verbatim}
-  \punctstyle{<style>}
-\end{verbatim}
-选择标点样式, 有效值为
-\begin{verbatim}
-  quanjiao (所有标点符号占一个汉字宽度，
-            相邻两个标点占一个半汉字宽度)
-  banjiao  (所有标点符号占半个汉字宽度)
-  hangmobanjiao (所有标点符号占一个汉字宽度，行末行首半角)
-  kaiming  (句号、叹号、问号占一个汉字宽度，其他标点占半个汉字宽度)
-\end{verbatim}
-缺省为全角式。注意：不论选择哪种样式，都提供行末对齐(margin kerning)功能。
-
-
-
-\begin{Theorem} \label{thm:latex}
-\LaTeX 的输出是最完美的.
-\end{Theorem}
-
-先证明一个引理
-\begin{Lemma} \label{thm:tex}
-\TeX 文件在不同操作系统下的排版结果完全一致.
-\end{Lemma}
-
-\begin{proof}
-这是证明.
-\end{proof}
-
-
-\begin{proof}[定理~\ref{thm:latex}的证明]
-显然是错的.
-\end{proof}
-
-单个带编号的表达式
-\begin{equation}\label{eq:a1}
-x=y+z
-\end{equation}
-
-单个不带编号的表达式
-\[
-y=x-z.
-\]
-
-不带编号的多行表达式
-\begin{eqnarray*}
-x&=&y+z \\
- &=&z-s\\
- &<& 3. \\
- && \mbox{一些注释}
-\end{eqnarray*}
-
-带编号的多行表达式
-\begin{eqnarray}
- x&=& y-z, \label{eq:aa1}\\
- y&=& x+z, \nonumber \\
- z&=&y-x. \label{eq:aa2}
-\end{eqnarray}
-
-
-
-引用:   定理\ref{thm:latex}的推论是什么呢？
-方程式编号:  由(\ref{eq:a1})(\ref{eq:aa2})式.
-
-\subsection{列举环境:  enumerate}
-
-环境 enumerate 已经被改写，增加了一个可选参数[字符串], 用以控制所进。例如，
-\begin{verbatim}
-  \begin{enumerate}
-    \item This is an example.
-    \item This is an example.
-      \begin{enumerate}
-      \item This is an example.
-      \item This is an example.
-    \end{enumerate}
-  \end{enumerate}
-  \begin{enumerate}[Mn]% 字符串"Mn"的宽度为增加的缩进。
-                       % 缺省值为 [M]
-    \item This is an example.
-    \item This is an example.
-      \begin{enumerate}[Mnn]% 字符串"Mnn"的宽度为增加的缩进。
-      \item This is an example.
-      \item This is an example.
-    \end{enumerate}
-  \end{enumerate}
-\end{verbatim}
-的输出为
-  \begin{enumerate}
-    \item This is an example.
-    \item This is an example.
-      \begin{enumerate}
-      \item This is an example.
-      \item This is an example.
-    \end{enumerate}
-  \end{enumerate}
-  \begin{enumerate}[Mn]% 字符串"Mn"的宽度为增加的所进。
-                       % 缺省值为 [M]
-    \item This is an example.
-    \item This is an example.
-      \begin{enumerate}[Mnn]% 字符串"Mnn"的宽度为增加的所进。
-      \item This is an example.
-      \item This is an example.
-    \end{enumerate}
-  \end{enumerate}
-
-\clearpage
-
-\section{\TeX\ 简介}
-
-以下内容是 milksea@bbs.ctex.org 撰写的关于\TeX\ 的简单介绍。
-注意这不是一个入门教程，不讲 \TeX\ 系统的配置安装，也不讲具体的 \LaTeX\ 代码。
-这里仅仅试图以一些只言片语来解释：
-进入这个门槛之前新手应该知道的注意事项，以及遇到问题以后该去如何解决问题。
-
-\subsection{什么是 \TeX/\LaTeX，我是否应该选择它}
-
-\TeX\ 是最早由高德纳（Donald Knuth）教授创建的一门标记式宏语言，
-用来排版科技文章，尤其擅长处理复杂的数学公式。\TeX\ 同时也是处理这一语言的排版软件。
-\LaTeX\ 是 Leslie Lamport 在 \TeX\ 基础上按内容/格式分离和模块化等思想建立的一集 \TeX\ 上的格式。
-
-\TeX\ 本身的领域是专业排版（即方正书版、InDesign 的领域），
-但现在 TeX/LaTeX 也被广泛用于生成电子文档甚至幻灯片等，\TeX\ 语言的数学部分
-偶尔也在其他一些地方使用。但注意 \TeX\ 并不适用于文书处理（MS Office 的领域，以前和现在都不是）。
-
-选择使用 \TeX/\LaTeX\ 的理由包括：
 \begin{itemize}
-\item 免费软件；
-\item 专业的排版效果；
-\item 是事实上的专业数学排版标准；
-\item 广泛的西文期刊接收甚或只接收 LaTeX 格式的投稿；
-\item[] ……
+  \item 参考文献的录入请参考\ref{sec:relatedwork:ref};
+  \item 图片插入参考\ref{sec:relatedwork:table};
+  \item 分数和公式参考\ref{sec:relatedwork:equation};  
+  \item Latex绘图工具参考\ref{sec:method:tikz};
+  \item 代码块参考\ref{sec:method:code}; 
 \end{itemize}
-不选择使用 \TeX/\LaTeX\ 的理由包括：
-\begin{itemize}
-\item 需要相当精力学习；
-\item 图文混合排版能力弱；
-\item 仅流行于数学、物理、计算机等领域；
-\item 中文期刊的支持较差；
-\item[] ……
-\end{itemize}
-
-请尽量清醒看待网上经常见到的关于 \TeX\ 与其他软件的优劣比较和口水战。在选择使用或离开之前，请先考虑
-\TeX\ 的应用领域，想想它是否适合你的需要。
-
-\def\AAAA{}
-
-\subsection{我该用什么编辑器？}
-
-编辑器功能有简有繁，特色不一，从简单的纯文本编辑器到繁复的 Emacs，因人而易。基本功能有语法高亮、方便编译预览就很好了，扩充功能和定制有无限的可能。初学者可以使用功能简单、使用方便的专用编辑器，如 TeXWorks、Kile、WinEdt 等，或者类似所见即所得功能的 LyX；熟悉的人可以使用定制性更强的 Notepad++、SciTE、Vim、Emacs 等。这方面的介绍很多，一开始不妨多试几种，找到最适合自己的才是最好的。
-
-另外提醒一句，编辑器只是工作的助力，不必把它看得太重。一些编辑器有极为繁杂的功能，一些编辑器常常会引来黑客们的论战（如 Emacs 与 Vim）。为工作，别为这些浪费太多精力，适用即可。
-
-\subsection{我该去哪里寻找答案？}
-
-0、绝对的新手，先读完一本入门读物，了解基本的知识。
-
-1、无论如何，先读文档！绝大部分问题都是文档可以解决的。
-
-2、再利用 Google 搜索，利用(bbs.ctex.org)版面搜索。
-
-3、清楚、聪明地提出你的问题。
-
-
-\subsection{我应该看什么 \LaTeX\ 读物？}
-
-这不是一个容易回答的问题，因为有许多选择，也同样有许多不合适的选择。
-这里只是选出一个比较好的答案。更多更详细的介绍可以在版面和网上寻找（注意时效）。
-
-近两年 \TeX\ 的中文处理发展很快，目前没有哪本书在中文处理方面给出一个最新进展的合适综述，
-因而下面的介绍也不主要考虑中文处理。
-
-\begin{enumerate}
-\item 我可以阅读英文
-
-\begin{enumerate}
-\item 我要迅速入门：ltxprimer.pdf (LaTeX Tutorials: A Primer, India TUG)
-\item 我要系统学习：A Guide to LaTeX, 4th Edition, Addison-Wesley
-      有机械工业出版社的影印版（《LaTeX实用教程》）
-\item 我要深入学习：要读许多书和文档，TeXbook 是必读的
-\item 还有呢？去读你使用的每一个宏包的说明文档
-\item 还有许多专题文档，如讲数学公式、图形、表格、字体等
-\end{enumerate}
-
-\item 我更愿意阅读中文
-\begin{enumerate}
-\item 我要迅速入门：lnotes.pdf (LaTeX Notes, 1.20, Alpha Huang)
-\item 我要系统学习：《LaTeX2ε 科技排版指南》，邓建松（电子版）
- 如果不好找，看《LaTeX 入门与提高》第二版，陈志杰等
-\item 我要深入学习：TeXbook0.pdf (特可爱原本，TeXbook 的中译，xianxian)
-\item 还有呢？英语，绝大多数 TeX 资料还是英文的
-\end{enumerate}
-\end{enumerate}
-
-\subsection{什么知识会过时？什么不会？}
-
-\TeX\ 是排版语言，也是广泛使用的软件，并且不断在发展中；
-因此，总有一些东西会很快过时。作为学习 \TeX\ 的人，
-免不了要看各种各样的书籍、电子文档和网络论坛上的只言片语，
-因此了解什么知识会迅速过时，什么知识不会是十分重要的。
-
-最稳定的是关于 Primitive \TeX\ 和 Plain \TeX\ 的知识，也就是 Knuth
-在他的《The TeXbook 》中介绍的内容。因为 \TeX\
-系统开发的初衷就是稳定性，要求今天的文档到很久以后仍可以得到完全相同的结果，
-因此 Knuth 限定了他的 \TeX\ 语言和相关实现的命令、语法。这些内容许多年来就没有多少变化，
-在未来的一些年里也不会有什么变化。
-Primitive \TeX\ 和 Plain \TeX\ 的知识主要包括 \TeX\ 排版的基本算法和原理，
-盒子的原理，底层的 \TeX\ 命令等。其中技巧性的东西大多在宏包设计中，
-初学者一般不会接触到很多；而基本原理则是常常被提到的，
-譬如，\TeX\ 把一切排版内容作为盒子（box）处理。
-
-相对稳定的是关于基本 \LaTeXe\
-的知识，也包括围绕 \LaTeXe\ 的一些核心宏包的知识。\LaTeXe\
-是自 1993 年以来的一个稳定的 \LaTeX\ 版本，直到最近的一次修订
-（2005 年）都没有大的变动。
-\LaTeX\ 的下一个计划中的版本 \LaTeX 3 遥遥无期，在可预见的将来，\LaTeXe\ 不会过时。
-\LaTeXe\ 的知识是目前大部分 \LaTeX\ 书籍的主体内容。关于 \LaTeX\ 的标准文档类
-（article、report、book、letter、slide 等），关于基本数学公式的输入，
-文档的章节层次，表格和矩阵，图表浮动体，LR 盒子与段落盒子……
-这些 \LaTeX\ 的核心内容都是最常用的，相对稳定的。
-与 \LaTeXe\ 相匹配的核心宏包，
-如 graphics(x)、ifthen、fontenc、doc 等，也同样是相对稳定的。
-还有一些被非常广泛应用的宏包，如 amsmath 系列，也可以看作是相对稳定的。
-
-简单地说，关于基本 \TeX/\LaTeX\ 的语言，都是比较稳定的。与之对应，实现或者支持 \TeX/\LaTeX\ 语言的软件，
-包括在 \TeX/\LaTeX\ 基础上建立的新的宏，都不大稳定。
-
-容易过时的是关于第三方 \LaTeX\ 宏包的知识、第三方 \TeX\ 工具的知识，以及新兴 \TeX\ 相关软件的知识等。
-\TeX\ 和 \LaTeX\ 语言是追求稳定的；但无论是宏包还是工具，作为不断更新软件，它们是不稳定的。
-容易过时的技术很多，而且现在广泛地出现在几乎所有 \LaTeX\ 文档之中，因此需要特别引起注意：
-宏包的过时的原因可能是宏包本身的升级换代带来了新功能或不兼容，
-也可能是同一功能的更新更好的宏包代替了旧的宏包。前者的典型例子比如绘图宏包 PGF/TikZ，
-现在的 2.00 版功能十分强大，和旧的 1.1x 版相差很大，和更旧的 0.x 版本则几乎完全不同；后
-者的典型例子比如 caption 宏包先是被更新的 caption2 宏包代替，后来 caption 宏包更新又使得
-caption2 宏包完全过时。——安装更新的发行版可以避免使用过旧的宏包；
-认真阅读宏包自带的文档而不是搜索得到的陈旧片断可以避免采用过时的代码。
-
-工具过时的主要原因也是升级换代和被其他工具替换。前者的典型例子是编辑器
-WinEdt 在 5.5 以后的版本支持 UTF-8 编码，而旧版本不支持；
-后者的典型例子是中文字体安装工具从 GBKFonts 到 xGBKFonts 到 FontsGen 不断被取代。
-图形插入是一个在 \TeX\ 实现、宏包与外围工具方面都更新很快的东西。
-在过去，最常用的输出格式是 PS（PostScript）格式，因此插入的图像以 EPS 为主流。
-使用 Dvips 为主要输出工具，外围工具有 GhostScript、bmeps 等等，相关宏包有 graphics 等，
-相关文档如《LaTeX2e 插图指南》。
-
-但凡提及“\LaTeX\ 只支持 EPS 图形”的，就是这个过时的时代的产物。事实上 \TeX/\LaTeX\
-并不限定任何图形格式，只不过是当时的输出格式（PS）和工具（Dvips）对 EPS 情有独钟而已。
-后来 PDF 格式成为主流，pdf\TeX、DVIPDFM、DVIPDFMx、\XeTeX\ 等工具则主要支持 PDF、PNG、JPG 格式的图形，
-涉及一系列工具如 ImageMagick、ebb 等。
-
-值得特别提出注意的就是，中文处理也一起是更新迅速、容易过时的部分。
-而且因为中文处理一直没有一个“官方”的“标准”做法，软件、工具、
-文档以及网上纷繁的笔记也就显得相当混乱。从八十年代开始的 CCT 系统、
-天元系统，到后来的 CJK 方式，到近来的 \XeTeX、LuaTeX 方式，
-中文处理的原理、软件、宏包、配置方式等都在不断变化中。
-
-
-
-\subsection{插图格式}
-
-前面提到， \LaTeX\ 主要支持EPS格式的插图文件， 而PDF\LaTeX\ 则更喜欢 PDF、PNG、JPG 格式的图形。
-为解决兼容性，最新版的 PDF\LaTeX 会自动把 EPS 文件转换为 PDF 文件。因此，使用 EPS 格式的插图可能具有最广泛
-的通用性。
-
-\subsection{\LaTeX\ 作图}
-
-目前已经有很多优秀的\LaTeX\ 作图宏包，如 pgf/Tikz 和 pstricks，两者都具有强大的作图能力。
-
