--- a/tex/method.tex
+++ b/tex/method.tex
@@ -2,8 +2,10 @@
 % -*- coding: utf-8 -*-
 
 \chapter{常用包}
+\label{chpt:method}
 
 \section{The Tikz 绘图Package}
+\label{sec:method:tikz}
 
 
 The {\scshape pdf}\ package, where ``{\scshape pdf}'' is supposed to mean ``portable
@@ -41,6 +43,7 @@ really ``show'' how things will look like.
 
 
 \section{代码块}
+\label{sec:method:code}
 
 python 代码可以直接使用\textbf{python}环境
 
