--- a/tex/relatedwork.tex
+++ b/tex/relatedwork.tex
@@ -1,19 +1,267 @@
 % !TeX root = ../main.tex
 % -*- coding: utf-8 -*-
 
-\chapter{说明}
+
+\chapter{NKThesis 相关说明} 
+\label{chpt:relatedwork}
+
+\section{系统要求}
+
+模板仅在 TeXLive 2016，TeXLive 2018 下测试通过。对于其它 TeX 发行版可能需要做个别修改。
+
+\section{NKThesis 使用说明}
+
+本模板可以使用以下方式编译:
+\begin{enumerate}
+ \item \XeLaTeX [推荐]
+\end{enumerate}
+
+例如，
+\begin{verbatim}
+         xelatex main
+         biber main      % 处理参考文献
+         xelatex main   % 连续编译两遍以生成正确的文献引用。
+\end{verbatim}
 
 
 
-本模板参照南开大学学位论文写作规范编写，
-仅仅提供了论文的基本格式，包括章节标题和正文字体、字号等等的设置。
+
+
+本模板用到 宋体、楷体、仿宋、黑体四种字体. 若需重新配置字体, 请修改 NKTfonts.cfg.
+对于 Linux/Mac 下的 TeX Live 2009, 可能需要设置环境变量 OSFONTDIR, 具体内容请参考 texmf.cnf.
+
+
+我们建议您使用\XeLaTeX\ 编译。与前两种方法相比，\XeLaTeX\  编译长文档的速度更快，
+编译一篇一百多页的论文只需几秒的时间(SL9400 @ 1.86GHz)。
+
+在改变编译方式前应先删除 *.toc 和 *.aux 文件，
+因为不同编译方式产生的辅助文件格式可能并不相同。
 
 
 
-您自愿使用这个模板。
-提供本模板的目的是为了给您的论文写作带来方便，然而，
-作者不保证这个模板完全符合学校的要求，也不对由此产生的任何后果负责。
-如果您不同意这些条款，请不要使用这个模板。
+注意：使用 \XeLaTeX\ 编译时，\XeTeX\ 的版本应不低于 0.9995.0(MiKTeX 2.8 或者 TeXLive 2009)。
 
 
-参考文献的录入请参考\ref{manual:ref}。 
+\section{引用章节号}
+\label{sec:ex:A}
+
+引用章节号请参考如下格式: \ref{chpt:relatedwork}\ref{sec:ex:A}.
+
+
+\section{中英文间隔}
+
+使用 \XeLaTeX\ 编译时，会自动在中英文转换时添加必要的空格。 使用 [PDF]\LaTeX\
+编译时仅忽略中文之间的空格，而中英文之间的空格予以保留。
+因此，不管何种编译方式，您都不需要在中英文间添加 $\tilde{}$ 以获得额外的空格。例如，
+
+这是 English 中文 $x=y$ 测试
+
+这是English中文$x=y$测试
+
+可以看出，以上两行用 \XeLaTeX\ 编译的结果是相同的。
+
+
+\section{NKThesis 预调用的宏包}
+
+NKThesis 已经调用以下宏包，您无须重新调用。
+
+\begin{center}
+\tablecaption{NKThesis 预调用的宏包}
+\begin{tabular}{l|l}
+\hline
+编译方式 & 调用的宏包\\ \hline
+\XeLaTeX & xeCJK, CJKnumb, graphicx, mathptmx, amssymb,mathpazo,pgf,tikz \\ \hline
+\end{tabular}
+\end{center}
+
+
+\section{图表}
+\label{sec:relatedwork:table}
+
+插图的例子：
+
+\begin{figure}
+  \centering
+  \includegraphics[viewport=0 0 2984 969,width=40mm]{nankaidaxue.pdf}  
+  \caption{\label{fig:nku}南开大学}
+\end{figure}
+
+\section{字体}
+
+一般情况下, 您不需要显式地设置字体. 如果确实需要, 请使用以下命令
+
+\begin{verbatim}
+宋体:  \rmfamily\upshape 或 \songti
+黑体:  \bfseries 或 \heiti
+楷体:  \itshape  或 \kaiti
+仿宋:  \ttfamily 或 \fangsong
+加粗:  \jiacu
+\end{verbatim}
+
+
+\section{参考文献} \label{sec:relatedwork:ref}
+参考文献引用:
+\cite{ChenCheChen2001,Nadkarni-1992,Hua-Wang-1973}
+\cite{ZhuKeZhen,Huo,Example}\cite{JiangXiZhou,Timoshenko,Zhang-Wang,Ding,GB6447-86}
+\cite[Theorem 2.1]{ZhuKeZhen}
+
+\subsection{录入参考文献}
+
+本模板采用 biblatex 宏包管理参考文献。如果你对此不熟悉，可以
+\begin{enumerate}
+\item 参考宏包使用说明，或者
+\item 手工排版参考文献，然后参考 nkthesis.bib 最后 3 条的格式录入。
+\end{enumerate}
+
+
+
+\section{一些建议}
+\subsection{关于分数的写法}
+\label{sec:relatedwork:equation}
+
+
+\LaTeX 提供宏命令\verb+\frac+, 用以打印分数. 为使得版面整齐, 该命令的使用应遵循以下原则:
+
+\begin{enumerate}
+\item 仅在分行表达式中使用,
+\item 不嵌套使用,
+\item 不在上下标中使用.
+\end{enumerate}
+
+也就是说, 行内表达式和上下标中出现分数时一律用 $a/b$表示, 如
+$(x+2)/((3x^2+4)(7+y))$. 下面是居中表达式:
+
+\[
+ x^2 = y^{1/2} +3.
+\]
+
+多行表达式: 尽量在加、减、乘、等号前换行. 在乘号前换行时,
+下一行首用 \string\times:
+\def\iint{\mathop{\int\!\!\!\int}}\def\calG{\mathcal G}
+\begin{eqnarray}
+&&\left|(W_{\psi_1}f)(a,b)-(W_{\psi_1}f)(a_j,b_{j,k})\right|^{2}\nonumber\\
+&=&\frac{1}{C^{2}_{\varphi}}\Bigg|\iint_{\calG} (W_{\varphi}f)(s,t) \nonumber\\
+&&\qquad\times \Bigg( (W_{\psi_1}\varphi)\left(\frac{a}{s},
+\frac{b-t}{s}\right)
+     -(W_{\psi_1}\varphi)\left(\frac{a_{j}}{s}, \frac{b_{j,k}-t}{s}\right)\Bigg)
+  \frac{dsdt}{s^{d+1}}\Bigg|^2 \nonumber\\
+&\le& \frac{1}{C^2_{\varphi}} \iint_{\calG} |(W_{\varphi}f)(s,t)|^2 \nonumber\\
+&&\qquad \times\left| (W_{\psi_1}\varphi)\left(\frac{a}{s},
+\frac{b-t}{s}\right)
+    -(W_{\psi_1}\varphi)\left(\frac{a_{j}}{s}, \frac{b_{j,k}-t}{s}\right)\right|
+   \frac{dsdt}{s^{d+1}}  \nonumber\\
+&&\qquad \times   \iint_{\calG}\!
+ \left|(W_{\psi_1}\varphi)\left(\frac{a}{s}, \frac{b-t}{s}\right)
+    -(W_{\psi_1}\varphi)\left(\frac{a_{j}}{s}, \frac{b_{j,k}-t}{s}\right)\right|
+ \frac{ ds dt}{s^{d+1}} \nonumber\\
+&=& \frac{1}{C^2_{\varphi}} ....  \label{eq:a0}
+\end{eqnarray}
+
+
+\subsection{标点}
+科技文献中一般用半角标点, 请参考《中国科学》发表的论文.
+
+如果使用全角标点, 可以使用
+\begin{verbatim}
+  \punctstyle{<style>}
+\end{verbatim}
+选择标点样式, 有效值为
+\begin{verbatim}
+  quanjiao (所有标点符号占一个汉字宽度，
+            相邻两个标点占一个半汉字宽度)
+  banjiao  (所有标点符号占半个汉字宽度)
+  hangmobanjiao (所有标点符号占一个汉字宽度，行末行首半角)
+  kaiming  (句号、叹号、问号占一个汉字宽度，其他标点占半个汉字宽度)
+\end{verbatim}
+缺省为全角式。注意：不论选择哪种样式，都提供行末对齐(margin kerning)功能。
+
+
+
+\begin{Theorem} \label{thm:latex}
+\LaTeX 的输出是最完美的.
+\end{Theorem}
+
+先证明一个引理
+\begin{Lemma} \label{thm:tex}
+\TeX 文件在不同操作系统下的排版结果完全一致.
+\end{Lemma}
+
+\begin{proof}
+这是证明.
+\end{proof}
+
+
+\begin{proof}[定理~\ref{thm:latex}的证明]
+显然是错的.
+\end{proof}
+
+单个带编号的表达式
+\begin{equation}\label{eq:a1}
+x=y+z
+\end{equation}
+
+单个不带编号的表达式
+\[
+y=x-z.
+\]
+
+不带编号的多行表达式
+\begin{eqnarray*}
+x&=&y+z \\
+ &=&z-s\\
+ &<& 3. \\
+ && \mbox{一些注释}
+\end{eqnarray*}
+
+带编号的多行表达式
+\begin{eqnarray}
+ x&=& y-z, \label{eq:aa1}\\
+ y&=& x+z, \nonumber \\
+ z&=&y-x. \label{eq:aa2}
+\end{eqnarray}
+
+
+
+引用:   定理\ref{thm:latex}的推论是什么呢？
+方程式编号:  由(\ref{eq:a1})(\ref{eq:aa2})式.
+
+\subsection{列举环境:  enumerate}
+
+环境 enumerate 已经被改写，增加了一个可选参数[字符串], 用以控制所进。例如，
+\begin{verbatim}
+  \begin{enumerate}
+    \item This is an example.
+    \item This is an example.
+      \begin{enumerate}
+      \item This is an example.
+      \item This is an example.
+    \end{enumerate}
+  \end{enumerate}
+  \begin{enumerate}[Mn]% 字符串"Mn"的宽度为增加的缩进。
+                       % 缺省值为 [M]
+    \item This is an example.
+    \item This is an example.
+      \begin{enumerate}[Mnn]% 字符串"Mnn"的宽度为增加的缩进。
+      \item This is an example.
+      \item This is an example.
+    \end{enumerate}
+  \end{enumerate}
+\end{verbatim}
+的输出为
+  \begin{enumerate}
+    \item This is an example.
+    \item This is an example.
+      \begin{enumerate}
+      \item This is an example.
+      \item This is an example.
+    \end{enumerate}
+  \end{enumerate}
+  \begin{enumerate}[Mn]% 字符串"Mn"的宽度为增加的所进。
+                       % 缺省值为 [M]
+    \item This is an example.
+    \item This is an example.
+      \begin{enumerate}[Mnn]% 字符串"Mnn"的宽度为增加的所进。
+      \item This is an example.
+      \item This is an example.
+    \end{enumerate}
+  \end{enumerate}
