--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -1,3 +1,7 @@
 % !TeX root = ../main.tex
 % -*- coding: utf-8 -*-
 \chapter{总结展望}
+
+任何问题可在GitHub上发起issue 
+
+\href{https://github.com/NewFuture/NKThesis/issues/new}{github.com/NewFuture/NKThesis/issues/}
