--- a/NKThesis.sty
+++ b/NKThesis.sty
@@ -39,7 +39,6 @@
 \def\jiacuu{\special{pdf: literal 0 Tr}}
 
 \ifxetex
-  \RequirePackage[bookmarksnumbered]{hyperref}
   \RequirePackage{xeCJK}
   \edef\CJK@UnicodeEnc{UTF8}
   \def\CJKaddEncHook#1#2{\expandafter\def\csname xeCJK@enc@#1\endcsname{#2}}
@@ -51,12 +50,12 @@
   \csname xeCJK@enc@UTF8\endcsname
   \def\CJK@tenthousand{万}
   \RequirePackage{graphicx}
+  \RequirePackage[bookmarksnumbered]{hyperref}
 \else
-  \RequirePackage[unicode,bookmarksnumbered]{hyperref}
   \RequirePackage{CJK,CJKnumb}
   \RequirePackage{uniGBK}
-  % \RequirePackage{CJKpunct}
-  % \RequirePackage{CJKspace}
+  \RequirePackage[unicode,bookmarksnumbered]{hyperref}
+%  \RequirePackage{CJKpunct}\RequirePackage{CJKspace}
   \AtBeginDocument{\begin{CJK*}{UTF8}{rm}}
   \AtEndDocument{\newpage\end{CJK*}}
   \usepackage[pdftex]{graphicx}
