更新简历模板

--- a/tex/resume.tex
+++ b/tex/resume.tex
@@ -2,3 +2,29 @@
 % -*- coding: utf-8 -*-
 
 \chapter*{个人简历}
+
+
+xxx，出生于yyyy年mm月dd日。
+在20yy年毕业于xx大学XX专业并获得xx士学位。
+于20xx年至今在南开大学就读xxx研究生。
+
+
+\section*{\leftline{研究生期间发表论文:}}
+% 学术论文研究成果按发表的时间顺序列出
+% (已发表的列在前面，已接收待发表的放在后面)
+% 格式方便阅读为主可参考百度学术Google学术
+
+\begin{itemize}
+	\item 周恩来. 周恩来选集[M]. 人民出版社, 1980.
+	\item 周恩来. 周恩来外交文选[M]. 中央文献出版社, 1990.
+\end{itemize}
+
+
+
+
+% 其他成果有可添加
+% \section*{\leftline{研究生期间其它成果:}}
+% % 研究成果可以是在学期间参加的研究项目、申请的专利或获奖等
+% \begin{itemize}
+% 	\item 
+% \end{itemize}
