--- a/NKThesis.sty
+++ b/NKThesis.sty
@@ -800,7 +800,7 @@
 % 代码块
 \RequirePackage[procnames]{listings}
 \RequirePackage{xcolor}
-\RequirePackage[labelsep=quad]{caption}
+\RequirePackage[labelsep=quad,font=small,skip=6pt]{caption}
 \renewcommand{\lstlistingname}{代码}
 
 \colorlet{commentcolour}{lime!60!black}
