代码块间距

--- a/NKThesis.sty
+++ b/NKThesis.sty
@@ -834,6 +834,7 @@
   breakindent=.5\textwidth,
   framexleftmargin=1.5em,
   xleftmargin=2em,
+  aboveskip=1em,
   literate=*%
   {-}{{\setoperatorcolour-}}{1}%
   {+}{{\setoperatorcolour+}}{1}%
