添加答辩主席和评阅人

--- a/NKThesis.sty
+++ b/NKThesis.sty
@@ -636,7 +636,7 @@
 \NKT@definekey{指导教师}            {zhidaojiaoshi}
 \NKT@definekey{申请学位}            {shenqingxuewei}
 \NKT@definekey{培养单位}            {peiyangdanwei}
-\NKT@definekey{学科专业}            {xuekezhuanye}
+\NKT@definekey{学科专业}            {zhuanye}
 \NKT@definekey{研究方向}            {yanjiufangxiang}
 \NKT@definekey{中图分类号}          {zhongtufenleihao}
 \NKT@definekey{UDC}                 {UDC}
@@ -649,13 +649,14 @@
 \NKT@definekey{答辩日期}            {dabianriqi}
 \NKT@definekey{论文类别}            {lunwenleibie}
 \NKT@definekey{院/系/所}            {yuanxisuo}
-\NKT@definekey{专业}                {zhuanye}
 \NKT@definekey{联系电话}            {lianxidianhua}
 \NKT@definekey{Email}               {Email}
 \NKT@definekey{通讯地址(邮编)}       {tongxundizhi}
 \NKT@definekey{备注}                {beizhu}
 \NKT@definekey{是否批准为非公开论文}  {shifougongkai}
 \NKT@definekey{非公开论文编号}       {feigongkailunwenbianhao}
+\NKT@definekey{答辩委员会主席}       {dabianzhuxi}
+\NKT@definekey{评阅人}              {pingyueren}
 
 \csname CJK@makeActive\endcsname
 
