--- a/main.tex
+++ b/main.tex
@@ -52,6 +52,8 @@
 	培养单位       = 南开大学,
 	学科专业       = 文科,
 	研究方向       = 国际政治,
+	答辩委员会主席 = {张伯苓},
+	评阅人 = {严范孙},
 	中图分类号     = ,
 	UDC            = ,
 	学校代码       = 10055,
@@ -66,7 +68,6 @@
 	答辩日期       = ,
 	论文类别       = 学历硕士, % 博士 | 学历硕士 | 专业学位硕士 | 同等学力硕士
 	院/系/所       = 文学部,
-	专业           = 文科,
 	联系电话       = 1234567890,
 	Email          = ZhouEnlai@nankai.edu.cn,
 	通讯地址(邮编) = 300000,
