图表目录说明 #5
colse #5

--- a/main.tex
+++ b/main.tex
@@ -37,9 +37,11 @@
 	./tex/resume
 }
 \begin{document}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %  设置基本信息
 %  注意:  逗号`,'是项目分隔符. 如果某一项的值出现逗号, 应放在花括号内, 如 {,}
-%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \NKTsetup{
 	% 封面设置
 	论文题目(中文) = 我是爱南开的,
@@ -74,17 +76,28 @@
 	备注           = {}
 }
 
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 论文开始部分
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 摘要
 \include{./tex/abstract}
-
+% 论文目录
 \tableofcontents
+% 列出图表目录，如果需要可取消注释
+% \listoffigures
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 论文主体章节
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \include{./tex/introduction}
 \include{./tex/relatedwork}
 \include{./tex/method}
 \include{./tex/discussion}
 \include{./tex/summary}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 论文其他信息
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \include{./tex/references}
 \include{./tex/acknowledgements}
 \include{./tex/appendices}
