--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
 	论文题目(英文) = I Love Nankai,
 	论文作者       = 周恩来,
 	学号           = 19190062,
-	指导教师       = 张伯苓~教授,
+	指导教师       = 张伯苓教授,
 	申请学位       = 硕士,
 	培养单位       = 南开大学,
 	学科专业       = 文科,
