修正texlive2021下编译报错
LaTeX3 Error: Control sequence \CJKaddEncHook already defined.

--- a/NKThesis.sty
+++ b/NKThesis.sty
@@ -47,6 +47,7 @@
     \multiply\@tempcnta 256\relax
     \advance\@tempcnta#2\relax
     \char\@tempcnta}
+  \let\CJKaddEncHook\undefined
   \RequirePackage{CJKnumb}
   \csname xeCJK@enc@UTF8\endcsname
   \def\CJK@tenthousand{万}
