根据新版规范（20200311）进行了少许调整

--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -3,4 +3,13 @@
 
 %\makeschapterhead{致谢}
 \chapter*{致谢}
+{
+\fangsong
+\setlength{\baselineskip}{16pt}
+\setlength{\parskip}{0pt}
+% 2020版标准4.8
+% 附录：标题要求同各章标题。文字部分仿宋12磅(或小四)，固定值行距16磅，段前段后0磅
+% 实操中有看到未使用仿宋的附录未被图书馆指明格式问题，因此或可酌情选择不设置字体。
+
 感谢您使用本模板。
+}
