--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -84,6 +84,7 @@
 \item 我更愿意阅读中文
 \begin{enumerate}
 \item 我要迅速入门：lnotes.pdf (LaTeX Notes, 1.20, Alpha Huang)
+ 该书目前已有第二版 lnotes2.pdf (且书籍源码已公开于github，参见\url{https://github.com/huangxg/lnotes})
 \item 我要系统学习：《LaTeX2ε 科技排版指南》，邓建松（电子版）
  如果不好找，看《LaTeX 入门与提高》第二版，陈志杰等
 \item 我要深入学习：TeXbook0.pdf (特可爱原本，TeXbook 的中译，xianxian)
