--- a/tex/resume.tex
+++ b/tex/resume.tex
@@ -1,18 +1,32 @@
 % !TeX root = ../main.tex
 % -*- coding: utf-8 -*-
 
-\chapter*{个人简历}
+% 2020版要求4.8
+% 个人简历、在学期间发表的学术论文与研究成果：
+% 标题要求同各章标题。文字部分：宋体10.5磅(或五号)，英文用Times New Roman字体10.5磅(或五号)，固定值行距16磅，段前段后0磅，发表学术论文书写格式同参考文献
+% 这一部分要求似乎较宽松，大小和行距或许可以不改。
 
+\chapter*{个人简历、在学期间发表的学术论文与研究成果}
+
+\section*{\leftline{个人简历}}
+
+{
+\zihaowu
+\setlength{\baselineskip}{16pt}
+\setlength{\parskip}{0pt}
 
 xxx，出生于yyyy年mm月dd日。
 在20yy年毕业于xx大学XX专业并获得xx士学位。
 于20xx年至今在南开大学就读xxx研究生。
 
+}
 
 \section*{\leftline{研究生期间发表论文:}}
 % 学术论文研究成果按发表的时间顺序列出
 % (已发表的列在前面，已接收待发表的放在后面)
 % 格式方便阅读为主可参考百度学术Google学术
+
+% 注：这个要求似乎比参考文献宽松，因此没改。若强求格式，可改为普通文本并参照上一段修改字号行距等格式。
 
 \begin{itemize}
 	\item 周恩来. 周恩来选集[M]. 人民出版社, 1980.
