--- a/NKThesis.sty
+++ b/NKThesis.sty
@@ -42,6 +42,7 @@
 \ifxetex
   \RequirePackage{xeCJK}
   \edef\CJK@UnicodeEnc{UTF8}
+  % TexLive2021/2022，xelatex编译时，需注释下行，以免报错LaTeX3 Error: Control sequence \CJKaddEncHook already defined.
   \def\CJKaddEncHook#1#2{\expandafter\def\csname xeCJK@enc@#1\endcsname{#2}}
   \def\Unicode#1#2{\@tempcnta#1\relax
     \multiply\@tempcnta 256\relax
@@ -204,7 +205,7 @@
 \def\chapterformat{\centering\fontsize{16}{19}\bfseries\jiacu}
 \def\sectionformat{\centering\bfseries\zihaosi}
 \def\subsectionformat{\bfseries\fontsize{13}{15}\selectfont}
-\def\subsubsectionformat{\bfseries\zihaowu}
+\def\subsubsectionformat{\bfseries\zihaoxiaosi}
 
 
 \def\chapter{
@@ -556,6 +557,7 @@
 
 \def\sectionname{\thesection}
 \def\subsectionname{\thesubsection}
+\def\subsubsectionname{\thesubsubsection}
 
 
 \newcount\NKT@itemcnt
