--- a/tex/references.tex
+++ b/tex/references.tex
@@ -1,4 +1,14 @@
 % !TeX root = ../main.tex
 % -*- coding: utf-8 -*-
 
+{
+\zihaowu
+\setlength{\bibitemsep}{0pt}
+\setstretch{1.3}
+% 2020版标准4.8
+% 参考文献：标题要求同各章标题。文字部分：宋体10.5磅(或五号)，英文用Times New Roman字体10.5磅(或五号)，固定值行距16磅，段前段后0磅
+% TeXLive2021中xelatex编译，尝试直接设置行距固定值，似对printbibliography无效，因此使用了1.3 \approx 16 \div 12
+
 \printbibliography
+
+}
