fix: 参考文献标题变成Bibliography的问题

--- a/tex/references.tex
+++ b/tex/references.tex
@@ -9,6 +9,6 @@
 % 参考文献：标题要求同各章标题。文字部分：宋体10.5磅(或五号)，英文用Times New Roman字体10.5磅(或五号)，固定值行距16磅，段前段后0磅
 % TeXLive2021中xelatex编译，尝试直接设置行距固定值，似对printbibliography无效，因此使用了1.3 \approx 16 \div 12
 
-\printbibliography
+\printbibliography[title=参考文献]
 
 }
