专业学位硕士打勾

--- a/NKThesis.sty
+++ b/NKThesis.sty
@@ -627,7 +627,8 @@
 \csname CJK@makeInactive\endcsname
 \def\NKT@string@boshi{博士}
 \def\NKT@string@xuelishuoshi{学历硕士}
-\def\NKT@string@zhuanyeshuoshixuewei{硕士专业学位}
+%\def\NKT@string@zhuanyeshuoshixuewei{硕士专业学位}
+\def\NKT@string@zhuanyexueweishuoshi{专业学位硕士}
 \def\NKT@string@gaoxiaojiaoshi{高校教师}
 \def\NKT@string@tongdengxuelishuoshi{同等学力硕士}
 
