--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -7,7 +7,7 @@
 
 \section{\TeX\ 简介}
 
-以下内容是 milksea@bbs.ctex.org 撰写的关于\TeX\ 的简单介绍。
+以下内容是 milksea@bbs.ctex.org 撰写的关于\TeX\ 的简单介绍, 有修改。
 注意这不是一个入门教程，不讲 \TeX\ 系统的配置安装，也不讲具体的 \LaTeX\ 代码。
 这里仅仅试图以一些只言片语来解释：
 进入这个门槛之前新手应该知道的注意事项，以及遇到问题以后该去如何解决问题。
@@ -56,7 +56,7 @@
 
 1、无论如何，先读文档！绝大部分问题都是文档可以解决的。
 
-2、再利用 Google 搜索，利用(bbs.ctex.org)版面搜索。
+2、再利用 Google 搜索，https://github.com/CTeX-org/forum 或 https://tex.stackexchange.com。
 
 3、清楚、聪明地提出你的问题。
 
