--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,11 @@
 % 使用三级节标题，如1.2.3.4
 \setcounter{secnumdepth}{4}
 
+% 公式编号字体大小
+% \makeatletter 
+% \renewcommand\@eqnnum{{\zihaowu (\theequation)}} 
+% \makeatother
+
 \includeonly{
 	./tex/abstract,
 	./tex/introduction,
