--- a/NKThesis.sty
+++ b/NKThesis.sty
@@ -321,8 +321,8 @@
   \tocsubsectiontitlewidth 60pt
 \else
   \tocchaptertitlewidth 42pt
-  \tocsectiontitlewidth 42pt
-  \tocsubsectiontitlewidth 60pt
+  \tocsectiontitlewidth 38pt
+  \tocsubsectiontitlewidth 38pt
 \fi
 
 \def\l@part#1#2{
@@ -352,8 +352,8 @@
     \advance\leftskip\toctitlesep
     \hskip -\leftskip
     \setnewwidth{#1}{#2}\nobreak\hfil\settowidth\npnumwidth{#3}%
-    \nobreak\leaders\hbox{\tocleaders}%
-    \hfill\nobreak\settowidth\npnumwidth{#3}%
+    \nobreak\hspace{.5em}\leaders\hbox{\tocleaders}%
+    \hfill\nobreak\hspace{.5em}\settowidth\npnumwidth{#3}%
     \hbox to\npnumwidth{\hfil #3}%
     \par
   \endgroup
@@ -589,10 +589,10 @@
 \def\tocchapterfonts{\rmfamily\zihaosi}
 \def\tocsectionfonts{\rmfamily\zihaoxiaosi}
 \def\tocsubsectionfonts{\rmfamily\zihaowu}
-\def\tocleaders{$\cdot\!\cdot\!\cdot\ $}
+\def\tocleaders{$\cdot$}
 \def\tocchapterindent{0em}
-\def\tocsectionindent{2em}
-\def\tocsubsectionindent{2em}
+\def\tocsectionindent{1em}
+\def\tocsubsectionindent{1em}
 \def\toctitlesep{12pt}
 \def\NKT@toc@over@part{12pt}
 \def\NKT@toc@below@part{6pt}
