--- a/tex/resume.tex
+++ b/tex/resume.tex
@@ -28,17 +28,31 @@ xxx，出生于yyyy年mm月dd日。
 
 % 注：这个要求似乎比参考文献宽松，因此没改。若强求格式，可改为普通文本并参照上一段修改字号行距等格式。
 
+{
+\zihaowu
+\setlength{\baselineskip}{16pt}
+\setlength{\parskip}{0pt}
+
 \begin{itemize}
 	\item 周恩来. 周恩来选集[M]. 人民出版社, 1980.
 	\item 周恩来. 周恩来外交文选[M]. 中央文献出版社, 1990.
 \end{itemize}
 
+}
 
 
 
 % 其他成果有可添加
 % \section*{\leftline{研究生期间其它成果:}}
 % % 研究成果可以是在学期间参加的研究项目、申请的专利或获奖等
+
+% {
+% \zihaowu
+% \setlength{\baselineskip}{16pt}
+% \setlength{\parskip}{0pt}
+
 % \begin{itemize}
 % 	\item 
 % \end{itemize}
+
+% }
