--- a/main.tex
+++ b/main.tex
@@ -58,8 +58,8 @@
 	论文作者       = 周恩来,
 	学号           = 19190062,
 	指导教师       = {张伯苓 \quad 教授},
-	申请学位       = 硕士, % 请参考2020版规范的2.2节，学术学位应包含类别（×学）和级别（硕士、博士）两部分，专业学位应写名称（如工程硕士）
-	培养单位       = 南开大学, % 请参考2020版规范的2.1节，应填写所在学院（所）的规范全称
+	申请学位       = 硕士, % 请参考规范的2.2节，学术学位应包含类别（×学）和级别（硕士、博士）两部分，专业学位应写名称（如工程硕士）
+	培养单位       = 南开大学, % 请参考规范的2.1节，应填写所在学院（所）的规范全称
 	学科专业       = 文科,
 	研究方向       = 国际政治,
 	答辩委员会主席 = {张伯苓},
@@ -67,7 +67,7 @@
 	中图分类号     = ,
 	UDC            = ,
 	学校代码       = 10055,
-	论文完成时间   = 二〇一八年四月, % 请参考2020版规范的2.1节，应填写提交评审的时间
+	论文完成时间   = 二〇二四年五月, % 请参考2024版规范的2.1节，应填写提交评审的时间
 	% 保密设置
 	密级           = 公开,	% 公开 | 限制 | 秘密 | 机密, 若为公开, 不填以下三项
 	非公开论文编号 = ,
