--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -4,14 +4,18 @@
 
 \begin{zhaiyao}
 
-这里输入中文摘要。
+    这份文档系统地介绍了一个基于南开大学研究生学位论文写作规范的LaTeX模板。
+    内容涵盖了模板的历史、使用说明、常用包介绍以及致谢等部分。
+    模板通过集成绘图包和代码块插入功能，方便用户创建图形和插入代码。
+    同时，感谢前人和校友们的贡献与支持，使得模板得以不断完善，以满足用户的需求。
+
 \end{zhaiyao}
 
 
 
 
 \begin{guanjianci}
-毕业论文；模板
+    毕业论文；模板
 \end{guanjianci}
 
 
@@ -19,12 +23,15 @@
 \begin{abstract}
 
 
-This is the abstract.
+    This document systematically introduces a LaTeX template based on the writing standards for postgraduate theses at Nankai University.
+    It covers the template's history, usage instructions, introduction of common packages, and acknowledgments.
+    By integrating Tikz for drawing and inserting code blocks, the template facilitates users in creating graphics and inserting code. 
+    Gratitude is extended to predecessors and alumni for their contributions and support, enabling continuous improvement of the template to meet users' needs.
 
 \end{abstract}
 
 
 
 \begin{keywords}
-Thesis; template
-\end{keywords} 
+    Thesis; template
+\end{keywords}
