--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -3,13 +3,36 @@
 
 %\makeschapterhead{致谢}
 \chapter*{致谢}
-{
-\fangsong
-\setlength{\baselineskip}{16pt}
-\setlength{\parskip}{0pt}
-% 2020版标准4.8
-% 附录：标题要求同各章标题。文字部分仿宋12磅(或小四)，固定值行距16磅，段前段后0磅
-% 实操中有看到未使用仿宋的附录未被图书馆指明格式问题，因此或可酌情选择不设置字体。
+ {
+  \fangsong
+  \setlength{\baselineskip}{16pt}
+  \setlength{\parskip}{0pt}
+  % 2020版标准4.8
+  % 附录：标题要求同各章标题。文字部分仿宋12磅(或小四)，固定值行距16磅，段前段后0磅
+  % 实操中有看到未使用仿宋的附录未被图书馆指明格式问题，因此或可酌情选择不设置字体。
 
-感谢您使用本模板。
-}
+  感谢您使用本模板。
+
+  感谢曾经互联网上的无数网友，Ctex 社区，和往年分享南开的Latex 的师生，
+  他们的积累和整理，以及无私奉献，让我们能够站在巨人的肩膀上。
+
+  感谢2018届校友 \href{https://github.com/darfux}{@darfux} 和 \href{https://github.com/newfuture}{@NewFuture}，
+  根据往年流传的南开论文Latex压缩包，结合《南开大学研究生学位论文写作规范（修订版）201709》，完善了第一个版本。
+  采用版本控制和协作维护的方式，将模板开源到GitHub，方便大家使用和贡献。
+
+  % 时间代考 https://github.com/NewFuture/NKThesis/pull/20
+  感谢2022届校友 \href{https://github.com/gsxab}{@gsxab}，
+  参照《南开大学研究生学位论文写作规范（修订版）2020031》更新至2022标准。
+
+  % https://github.com/NewFuture/NKThesis/pull/36
+  感谢 2024届校友 \href{https://github.com/lovebettygirl}{@LoveBettygirl}，
+  参照《南开大学研究生学位论文写作规范（2024版）》更新至2024标准。
+
+  同时感谢 \href{https://github.com/zzeitt}{@zzeitt} 对参考文献格式的更新,
+  以及
+  \href{https://github.com/sszzsupersupersupersuper}{@sszzsupersupersupersuper},
+  \href{https://github.com/qianchd}{@Chengde Qian},
+  \href{https://github.com/zlgnow}{@zlgNow}
+  等同学的对此模板的修改和完善。
+
+ }
