--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -7,23 +7,29 @@
 \label{chpt:introduction}
 
 
-本模板参照南开大学学位论文写作规范编写，
-仅仅提供了论文的基本格式，包括章节标题和正文字体、字号等等的设置。
+本模板参照南开大学学位论文写作规范《南开大学研究生学位论文写作规范（2024版）》编写，
+提供了论文的基本格式，包括章节标题和正文字体、字号等等的设置。
 
-
+此模板有主要由南开历届毕业生修改和完善，
+历经 《南开大学研究生学位论文写作规范（修订版）201709》，《南开大学研究生学位论文写作规范（修订版）2020031》修改而来。
 
 您自愿使用这个模板。
 提供本模板的目的是为了给您的论文写作带来方便，然而，
-作者不保证这个模板完全符合学校的要求，也不对由此产生的任何后果负责。
+我们不保证这个模板完全符合学校的要求，也不对由此产生的任何后果负责。
 如果您不同意这些条款，请不要使用这个模板。
 
+同时欢迎您完善此模板，使其更加规范易用，方便未来的学弟学妹们。
+此模板的说明可能不够准确或者过时，
+您可直接在此 \url{https://github.com/NewFuture/NKThesis} 修改对应文件，
+然后发起一个Pull Request，我们会及时更新。
+部分配置可能有误或有兼容问题, 可发起Pull Request或者Issue。
 
 \section{常用内容}
 
 \begin{itemize}
   \item 参考文献的录入请参考\ref{sec:relatedwork:ref};
   \item 图片插入参考\ref{sec:relatedwork:table};
-  \item 分数和公式参考\ref{sec:relatedwork:equation};  
+  \item 分数和公式参考\ref{sec:relatedwork:equation};
   \item Latex绘图工具参考\ref{sec:method:tikz};
-  \item 代码块参考\ref{sec:method:code}; 
+  \item 代码块参考\ref{sec:method:code};
 \end{itemize}
