--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -2,6 +2,9 @@
 % -*- coding: utf-8 -*-
 \chapter{总结展望}
 
-任何问题可在GitHub上发起issue 
+任何问题可在GitHub上发起issue。
 
-\href{https://github.com/NewFuture/NKThesis/issues/new}{github.com/NewFuture/NKThesis/issues/}
+\href{https://github.com/NewFuture/NKThesis/issues/}{github.com/NewFuture/NKThesis/issues/}
+
+
+欢迎大家使用、修改、分享这个模板，也欢迎大家贡献代码，让这个模板更加完善。
