--- a/NKThesis.sty
+++ b/NKThesis.sty
@@ -118,7 +118,9 @@
   \def\chaptername{第\zhnum{chapter}章}
   \def\thesection{第\zhnum{section}节}
   \def\thesubsection{\zhnum{subsection}、}
+  \titleformat{\subsection}[hang]{\bfseries\zihaosi}{\hspace{2em}\thesubsection}{}
   \def\thesubsubsection{（\zhnum{subsubsection}）}
+  \titleformat{\subsubsection}[hang]{\bfseries\zihaoxiaosi}{\hspace{2em}\thesubsubsection}{}
   \def\contentsname{目录}
   \def\appendixnamenonumber{附录}
   \def\nkrefname{参考文献}
