--- a/tex/A1_references.tex
+++ b/tex/A1_references.tex
@@ -8,6 +8,6 @@
 % 2020版标准4.8
 % 参考文献：标题要求同各章标题。文字部分：宋体10.5磅(或五号)，英文用Times New Roman字体10.5磅(或五号)，固定值行距16磅，段前段后0磅
 
-\printbibliography[title=参考文献]
+\printbibliography[title=\nkrefname]
 
 }
